syntax="proto3";
package feedback;
option go_package="feedbackpb/api/feedbackpb";


message Comment {
    string username=1;
    string name=2;
    string comment=3;
    int32 rating=4;
}
message CommentRequest {
    Comment Comment=1;
}
message CommentResponse {
}

message ListFeedbackRequest {

}

message ListFeedbackResponse {
    repeated Comment comment=1;
}

service FeedbackService{
    rpc SendFeedback(CommentRequest) returns (CommentResponse);
    rpc ListFeedback(ListFeedbackRequest) returns (ListFeedbackResponse);
}
